...
    var body: some View {
        ZStack {
            Color.DarkBackground.edgesIgnoringSafeArea(.all)

            MusicPlayerView(viewModel: musicViewModel)
                .frame(width: 480, height: 297)
                .accessibilityIdentifier("musicPlayerView")
        }
        .onAppear {
            // Assuming ChatMusicController is still needed to set up the MusicPlayerViewModel
            ChatMusicController.shared.setup(viewModel: musicViewModel)

            let tracks = self.loadBundleTracks()
...
